tests/netperf/isilon_40G/udp_000/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.7 12.5 13.2 15.2 16.0 18.3 18.5 20.6 20.6 22.9 22.5 24.2 23.8 26.2 25.9 27.9 27.1 29.0 28.2 30.3 29.5 31.5 30.4 32.1 30.8 33.0 31.3 33.3 35.5 34.3 35.8 34.7 36.9 35.2 37.0 35.8 37.8 36.1 37.8 36.3 38.3 36.7 38.6 37.1 39.2 37.0 38.7 36.9 38.8 36.9 38.9 36.9
average: 30.2442
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.0 
[ipfwd] starting
current:  11.957%, error:  12.0%, probability:  0.000%
current:  12.000%, error:  0.0%, probability:  0.000%
current:  13.037%, error:  1.0%, probability:  0.000%
current:  13.989%, error:  1.0%, probability:  0.000%
current:  14.868%, error:  0.9%, probability:  0.000%
current:  15.674%, error:  0.8%, probability:  0.000%
current:  15.417%, error:  0.3%, probability:  0.000%
current:  14.178%, error:  1.2%, probability:  0.000%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 192.168.166.32 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 192.168.166.32 (192.168.166.32) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.00     2165957      0    9463.19
512000           30.00     2161333           9442.99

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf
^C
14.0 17.5 22.4 25.0 29.9 31.9 36.8 38.2 43.6 44.4 49.4 49.6 54.5 54.4 59.4 58.8 63.7 62.7 67.7 66.4 71.3 69.6 74.5 72.4 77.2 74.7 79.6 77.2 82.1 79.4 84.4 81.3 86.4 83.2 88.2 85.0 90.3 87.0 92.0 88.2 93.1 89.5 94.5 90.4 95.5 91.6 96.8 92.7 97.7 93.5 98.6 94.2 99.4 95.2 100.0 95.7
average: 72.0125
zephram-2# 

